// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button with emoji 1`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "border": "1px solid #eee",
      "borderRadius": 3,
      "cursor": "pointer",
      "fontSize": 15,
      "margin": 10,
      "padding": "3px 10px",
    }
  }
  type="button"
>
  <span
    aria-label="so cool"
    role="img"
  >
    😀 😎 👍 💯
  </span>
</button>
`;

exports[`Storyshots Button with text 1`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "border": "1px solid #eee",
      "borderRadius": 3,
      "cursor": "pointer",
      "fontSize": 15,
      "margin": 10,
      "padding": "3px 10px",
    }
  }
  type="button"
>
  Hello Button
</button>
`;

exports[`Storyshots Dashboard with text 1`] = `
<div>
  Hello world, this is the dashboard!
</div>
`;

exports[`Storyshots Popup navigation standard 1`] = `
<div
  className="navigation__container"
>
  <div>
    <img
      className="navigation__logo--img"
      src={Object {}}
    />
  </div>
  <div>
    <img
      className="navigation__menu--img"
      src={Object {}}
    />
  </div>
</div>
`;

exports[`Storyshots Popup with text 1`] = `
<div
  className="popup"
>
  <div
    className="popup__container"
  >
    <div
      className="navigation__container"
    >
      <div>
        <img
          className="navigation__logo--img"
          src={Object {}}
        />
      </div>
      <div>
        <img
          className="navigation__menu--img"
          src={Object {}}
        />
      </div>
    </div>
    <div>
      Hello world, this is the popup.
    </div>
  </div>
</div>
`;
